--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "autogapslider",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React slider which gives gap automatically between slides according to viewport.",
   "author": "pranav",
   "license": "MIT",
-  "repository": "https://Pranav-medit.github.io/AutoGapSlider-React",
+  "repository": "https://github.com/Pranav-medit/AutoGapSlider-React",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
