--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
-  "keywords": ["react","responsive","reactjs","slider","react-slider","auto-gap-slider","auto-gap-react-slider","auto-space-slider","carousel","react-carousel"],
+  "keywords": [
+    "react",
+    "responsive",
+    "reactjs",
+    "slider",
+    "react-slider",
+    "auto-gap-slider",
+    "auto-gap-react-slider",
+    "auto-space-slider",
+    "carousel",
+    "react-carousel"
+  ],
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs  --jsxFragment React.Fragment",
+    "build": "microbundle-crl --minify --no-sourcemap --format modern  --jsxFragment React.Fragment --copy-files assets:dist/as",
     "start": "microbundle-crl watch --no-compress --format modern,cjs --jsxFragment React.Fragment",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
@@ -52,7 +63,23 @@
     "dist"
   ],
   "dependencies": {
-    "node-sass": "^7.0.1",
+    "sass": "^1.57.1",
     "tar": "^6.1.11"
+  },
+  "microbundle": {
+    "entry": "src/index.js",
+    "output": "dist",
+    "copy": [
+      {
+        "from": "assets",
+        "to": "dist/assets"
+      }
+    ],
+  
+    "mangle": {
+      "properties": {
+        "regex": "^_"
+      }
+    }
   }
 }
