--- a/package.json
+++ b/package.json
@@ -57,15 +57,14 @@
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "tar": "^6.1.11",
+    "sass": "^1.57.1"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {
-    "sass": "^1.57.1",
-    "tar": "^6.1.11"
-  },
+  "dependencies": {},
   "microbundle": {
     "entry": "src/index.js",
     "output": "dist",
@@ -75,7 +74,6 @@
         "to": "dist/assets"
       }
     ],
-  
     "mangle": {
       "properties": {
         "regex": "^_"
