--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-carousel"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "scripts": {
     "build": "microbundle-crl --minify --no-sourcemap --format modern,cjs  --jsxFragment React.Fragment --copy-files assets:dist/as",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
@@ -55,11 +55,11 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
-    "tar": "^6.1.11",
-    "sass": "^1.57.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.0",
+    "sass": "^1.57.1",
+    "tar": "^6.1.11"
   },
   "files": [
     "dist"
