--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
