--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "autogapslider": "file:..",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts"
+    "react-scripts": "file:../node_modules/react-scripts",
+    "postcss-flexbugs-fixes":"file:../postcss-flexbugs-fixes"
   },
   "devDependencies": {},
   "eslintConfig": {
