--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autogapslider-example",
-  "homepage": ".",
+  "homepage": "https://pranav-medit.github.io/AutoGapSlider-React/",
   "version": "1.0.0",
   "private": true,
   "scripts": {
