--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "scripts": {
     "build": "microbundle-crl --minify --no-sourcemap --format modern,cjs  --jsxFragment React.Fragment ",
     "start": "microbundle-crl watch --no-compress --format modern,cjs --jsxFragment React.Fragment",
+    "serve2": "webpack --mode development",
+    "build2": "webpack --mode production",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
@@ -41,8 +43,13 @@
     "react-dom": "*"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^9.1.2",
     "cross-env": "^7.0.2",
+    "css-loader": "^6.7.3",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react-app": "^7.0.1",
@@ -55,6 +62,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^5.5.1",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -62,13 +70,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.60.0",
-    "tar": "^6.1.11"
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "svg-url-loader": "^8.0.0",
+    "tar": "^6.1.11",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.80.0",
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {},
   "microbundle": {
     "entry": "src/index.js",
     "output": "dist",
