--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node": ">=12"
   },
   "scripts": {
-    "build": "microbundle-crl --minify --no-sourcemap --format modern,cjs  --jsxFragment React.Fragment ",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs --jsxFragment React.Fragment",
+    "build": "webpack --mode development",
+    "start": "webpack --mode production",
     "serve2": "webpack --mode development",
     "build2": "webpack --mode production",
     "prepare": "run-s build",
@@ -63,9 +63,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^5.5.1",
-    "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
-    "postcss-flexbugs-fixes": "^5.0.2",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -73,8 +71,6 @@
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
-    "svg-url-loader": "^8.0.0",
-    "tar": "^6.1.11",
     "url-loader": "^4.1.1",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2",
