--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=12"
   },
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack --mode development --watch",
     "build": "webpack --mode production",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
